# silentsuite

./: .dockerignore  .gitignore  Dockerfile.server  Dockerfile.web  FRONTEND_STRIPE_SPEC.md  LICENSE  README.md  TRANSLATING.md  package.json  pnpm-lock.yaml  turbo.json  wrangler.jsonc  zapstore.yaml
android/: .gitignore  ChangeLog.md  NOTICE  README.md  build.gradle  gradle.properties
bridge/: .gitignore  Dockerfile.dev  LICENSE  README.md  build.py  entrypoint.py  install.ps1  install.sh  pyproject.toml  silentsuite-bridge.spec
bridge/src/silentsuite_bridge/: __init__.py  __main__.py  accounts.py  auth_browser.py  auth_cli.py  autostart.py  config.py  tray.py
bridge/src/silentsuite_bridge/local_cache/: __init__.py  db.py  models.py
bridge/src/silentsuite_bridge/radicale/: __init__.py  auth.py  creds.py  etesync_cache.py  rights.py  storage.py
bridge/src/silentsuite_bridge/web/: __init__.py
bridge/tests/: conftest.py  mock_etebase.py  test_accounts.py  test_auth_browser_csrf.py  test_auth_roundtrip.py  test_config.py  test_dashboard_url_security.py  test_local_cache.py  test_main_accounts.py  test_main_startup.py  test_storage.py  test_sync_thread.py  test_version.py  test_web_dashboard.py
docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: README.md
scripts/: audit-high-critical.mjs
self-host/: .env.example  Caddyfile  SELF-HOSTING.md  close-signups.sh  docker-compose.yml  etebase-server.ini  install.sh  success.html  update.sh  verify.sh
server/: .dockerignore  ChangeLog.md  NOTICE  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
store-assets/: SCREENSHOT_DESIGN_DOCUMENT.md
tests/: test_android_security_static.py  (+2 more)
(+693 files in other folders)
